# ModifiedClapPluginClapFirst

./: CMakeLists.txt
src/: Factory.cpp  FactoryImpl.cpp  FactoryImpl.h
